<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Java 1 Fundamentals Week 1</string>
    <string name="editText">Enter Item</string>
    <string name="TextView">Number of Items</string>
    <string name="TextView2">Average Length of Items</string>
    <string name="TextView3">0</string>
    <string name="TextView4">0</string>
    <string name="button">Add Item</string>
    <string name="showAll">Show All</string>

</resources>
